--- a/src/app/kvm/components/LXDHostVMs/NumaResources/NumaResourcesCard/_index.scss
+++ b/src/app/kvm/components/LXDHostVMs/NumaResources/NumaResourcesCard/_index.scss
@@ -1,7 +1,6 @@
 @mixin NumaResourcesCard {
   .numa-resources-card {
     @extend %vf-is-bordered;
-    @extend %vf-bg--x-light;
     margin-bottom: $spv--x-large;
   }
 
